[tool.poetry]
name = "plox"
version = "0.1.0"
description = ""
authors = ["William Hammond <william.t.hammond@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
